// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opens the last section when multiple sectionns have been clicked 1`] = `
<ul>
  <li
    key="ck077o8h0000gvzi3g2kg3nj8"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    key="ck077o8h0000hvzi35rpb5mik"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    key="ck077o8h0000ivzi369ic0un8"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
    <p>
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </p>
  </li>
</ul>
`;

exports[`renders no sections as active by default 1`] = `
<ul>
  <li
    key="ck077o8gb0001vzi3apdz8bmh"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit.
    </p>
  </li>
  <li
    key="ck077o8gb0002vzi31z0fexbt"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    key="ck077o8gb0003vzi3ckn947ek"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;

exports[`renders with empty li 1`] = `<ul />`;

exports[`renders without crashing 1`] = `
<ul>
  <li>
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit.
    </p>
  </li>
  <li>
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li>
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;

exports[`the component opens a clicked section 1`] = `
<ul>
  <li
    key="ck077o8go0007vzi34zbv59bo"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit.
    </p>
  </li>
  <li
    key="ck077o8go0008vzi3hss88ktr"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    key="ck077o8go0009vzi34p7wfzbr"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;
